Se agrega imagen a index.hmtl

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <title>Mi Página</title>
 </head>
 <body>
-    <h1>Ingeneria en sistemas computacionales</h1>
+    <h1>Ingeniería en Sistemas Computacionales</h1>
+
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
     <div>Any Santiago - Repositorio ej02</div>
+
+    <hr>
+
+    <h3>Imagen de prueba</h3>
+    <img src="imgs/foto1.png" alt="Imagen de ejemplo" width="300">
+
 </body>
 </html>
